<resources>
    <string name="app_name">ENV</string>
    <string name="button">Button</string>
    <string name="name">NAME</string>
    <string name="textview">TextView</string>
    <string name="message">MESSAGE</string>
    <string name="lol">lol</string>
    <string name="enter_message">enter_message</string>
    <string name="listen">LISTEN</string>

    <string name="view">VIEW</string>

    <string name="send">SEND</string>
    <string name="status">status</string>
    <string name="getlocation">Location</string>
    <string name="indoor"><u>Indoor Information</u></string>
    <string name="outdoor"><u>Outdoor Information</u></string>
    <string name="snooze">snooze</string>
    <string name="no_massage">no massage</string>
    <string name="start_gps">Start GPS</string>
</resources>
